# Type_Object_Pattern

./: ..gitattributes.un~  .gitattributes  CMakeLists.txt  Demo.cpp  README.md
JsonFiles/: Monsters.json
include/: Breed.h  Monster.h
src/: Breed.cpp  Monster.cpp
